<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/app_bar"
        layout="@layout/custom_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chhose_asset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/asset_enter"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chhose_asset">

        <LinearLayout
            android:id="@+id/tapToScan"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/circle_hollow"
            android:elevation="5dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/theme_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:padding="@dimen/_5sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/barcode_navyblue" />

            <TextView
                android:id="@+id/category_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:gravity="center"
                android:text="@string/scan_bar"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>




                <LinearLayout
                    android:id="@+id/tapToManually"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:background="@drawable/circle_hollow"
                    android:orientation="vertical"
                    android:elevation="5dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:padding="@dimen/_10sdp"
                        android:layout_marginTop="-5dp"
                        android:src="@drawable/enter_navyblue" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:gravity="center"
                        android:text="@string/type_bar"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>