<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/heading_staff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/crn_enter"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:visibility="visible" />


    <LinearLayout
        android:id="@+id/staff_layou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/my_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:elevation="@dimen/_5sdp"
            android:background="@drawable/curveborder"
            android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/tapToScan"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:elevation="@dimen/_5sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/theme_img"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:background="@drawable/barcode"
                        android:backgroundTint="@color/navyBlue"
                        />

                    <TextView
                        android:id="@+id/category_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:text="@string/scan_bar"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:background="@drawable/curveborder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:elevation="@dimen/_5sdp"
            android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/tapToManually"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"

                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:background="@drawable/typemanually"
                        android:backgroundTint="@color/navyBlue"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:text="@string/type_bar"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/clint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/choose_radio"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/selectID_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:orientation="vertical"
                android:padding="@dimen/_14sdp">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_crn"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_5sdp"/>

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/radio_asset"/>
            </RadioGroup>

            <EditText
                android:id="@+id/crnID_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:background="@drawable/login_bck"
                android:hint="Type CRN here"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:elevation="5dp"
                android:textAllCaps="true"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/assedID_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:background="@drawable/login_bck"
                android:hint="Type Asset ID here"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textAllCaps="true"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                android:elevation="5dp"
                android:visibility="gone" />


            <Button
                android:id="@+id/search_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="100dp"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:background="@drawable/background_btn"
                android:drawableTint="@color/white"
                android:drawableLeft="@drawable/search"
                android:paddingLeft="@dimen/_70sdp"
                android:drawablePadding="-100dp"
                android:gravity="center"
                android:text="Search"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/search_crn_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="100dp"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:background="@drawable/background_btn"
                android:drawableTint="@color/white"
                android:drawableLeft="@drawable/search"
                android:paddingLeft="@dimen/_70sdp"
                android:drawablePadding="-100dp"
                android:gravity="center"
                android:text="Search"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
